# cmake-base-project

./: .gitignore  CMakeLists.txt  README.md
gtest/: CMakeLists.txt  CMakeLists.txt.in
sample-lib/: CMakeLists.txt
sample-lib/test/: unittest.cpp
